chore: add success and error message configuration

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,13 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+STORE_SUCCESS_MESSAGE="Berhasil membuat data."
+UPDATE_SUCCESS_MESSAGE="Berhasil memperbarui data."
+DELETE_SUCCESS_MESSAGE="Berhasil menghapus data."
+STORE_FAILED_MESSAGE="Gagal membuat data. "
+UPDATE_FAILED_MESSAGE="Gagal memperbarui data. "
+DELETE_FAILED_MESSAGE="Gagal menghapus data. "
+
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
