--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.15.4",
+        "@tailwindcss/aspect-ratio": "^0.2.1",
         "@tailwindcss/forms": "^0.2.1",
         "@tailwindcss/line-clamp": "^0.2.1",
         "alpinejs": "^2.7.3",
