--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "yajra/laravel-datatables": "^1.5"
     },
     "require-dev": {
+        "doctrine/dbal": "^3.1",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.4",
